[gd_scene load_steps=8 format=3 uid="uid://nqkucf1tvit0"]

[ext_resource type="Script" uid="uid://c22kbposf2mm4" path="res://scripts/DifficultSelector.gd" id="1_1o37c"]
[ext_resource type="Texture2D" uid="uid://df07fymgjru8m" path="res://sprites/screen_idle.jpg" id="2_7i46s"]
[ext_resource type="Texture2D" uid="uid://xhn1m66b6lph" path="res://sprites/botao_dificil.png" id="3_p4oki"]
[ext_resource type="Texture2D" uid="uid://d2ny5xfypaxp4" path="res://sprites/botao_facil.png" id="4_b2wdr"]
[ext_resource type="Texture2D" uid="uid://vyfrmia7ao5s" path="res://sprites/botao_medio.png" id="5_evuho"]
[ext_resource type="Texture2D" uid="uid://b7hcotk7dn7" path="res://sprites/texto_screen_difficult.png" id="6_b2wdr"]
[ext_resource type="Texture2D" uid="uid://dmcqyrinx385t" path="res://sprites/botao_seta.png" id="7_evuho"]

[node name="DifficultSelector" type="Node2D"]
script = ExtResource("1_1o37c")

[node name="ScreenIdle" type="Sprite2D" parent="."]
position = Vector2(577.264, 324.25)
scale = Vector2(0.72408, 0.72408)
texture = ExtResource("2_7i46s")

[node name="BotaoFacil" type="Sprite2D" parent="."]
position = Vector2(579, 245)
scale = Vector2(0.350148, 0.350147)
texture = ExtResource("4_b2wdr")

[node name="BotaoNormal" type="Sprite2D" parent="."]
position = Vector2(576, 392)
scale = Vector2(0.364732, 0.364732)
texture = ExtResource("5_evuho")

[node name="BotaoDificil" type="Sprite2D" parent="."]
position = Vector2(577, 535)
scale = Vector2(0.367824, 0.367824)
texture = ExtResource("3_p4oki")

[node name="TextoScreenDifficult" type="Sprite2D" parent="."]
position = Vector2(576.889, 321.5)
scale = Vector2(0.60463, 0.60463)
texture = ExtResource("6_b2wdr")

[node name="botaofacil" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 424.0
offset_top = 208.0
offset_right = 728.0
offset_bottom = 290.0

[node name="botaonormal" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 416.0
offset_top = 352.0
offset_right = 728.0
offset_bottom = 432.0

[node name="botaodificil" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
offset_left = 416.0
offset_top = 494.0
offset_right = 734.0
offset_bottom = 576.0

[node name="botaovoltar" type="Button" parent="."]
self_modulate = Color(1, 1, 1, 0)
offset_left = 68.0
offset_top = 51.0
offset_right = 121.0
offset_bottom = 104.0

[node name="BotaoSeta" type="Sprite2D" parent="."]
position = Vector2(94.4444, 76.6667)
scale = Vector2(0.200618, 0.200618)
texture = ExtResource("7_evuho")

[connection signal="pressed" from="botaofacil" to="." method="_on_botaofacil_pressed"]
[connection signal="pressed" from="botaonormal" to="." method="_on_botaonormal_pressed"]
[connection signal="pressed" from="botaodificil" to="." method="_on_botaodificil_pressed"]
[connection signal="pressed" from="botaovoltar" to="." method="_on_botaovoltar_pressed"]
